--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Install libsensors
+      run: sudo apt-get install -y libsensors-dev
     - name: make
       run: make
